# hrx-system

./: .bazel_to_cmake.cfg.py  .bazelignore  .bazelrc  .buildifier.json  .clang-format  .editorconfig  .gitattributes  .gitignore  BUILD.bazel  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  MODULE.bazel  README.md  configure-bazel.py  dev.py  lefthook-local.paranoid.example.yml  lefthook.yml  requirements-analysis.in  requirements-analysis.lock.txt  requirements-dev.in  requirements-dev.lock.txt  requirements-importers-mlir.in  requirements-importers-mlir.lock.txt  requirements-importers-tilelang.in  requirements-importers-tilelang.lock.txt  ruff.toml
build_tools/: BUILD.bazel  ci_core_linux.py  ci_core_linux_test.py
build_tools/amdgpu/: BUILD.bazel  README.md  binary.bzl  binary.cmake  cts.bzl  cts.cmake  elf_machine_map.inl  selectors.bzl  selectors.cmake  target_map.bzl  target_map.cmake  target_map.h  target_map.py
build_tools/bazel/: BUILD.bazel  amdgpu_device_toolchain_repo.bzl  cc.bzl  cc_attrs.bzl  cc_benchmark.bzl  cc_fuzz.bzl  cc_introspection.bzl  cc_link.bzl  cc_link_test.bzl  cc_opts.bzl  cc_rules_test.bzl  cc_test.bzl  cmake.bzl  compile_commands.bzl  compile_commands_merge.py  compile_commands_merge_test.py  configure.py  configure_test.py  deps.MODULE.bazel  executable.bzl  generate.bzl  glob.bzl  iree_amdgpu_binary.bzl  iree_hal_cts_test_suite.bzl  package_policy.bzl  python.bzl  query.bzl  requirements.bzl  rocm_repository.bzl  select.bzl
build_tools/bazel/test/: BUILD.bazel  cc_benchmark_rules_test.bzl  cc_benchmark_smoke_test_fixture.c  cc_fuzz_rules_test.bzl  cc_link_test.bzl  cc_rules_test.bzl  compile_commands_fixture.c  compile_commands_fixture.cc  compile_commands_rules_test.bzl  executable_rules_test.bzl  generate_rule_fixture.in  generate_rule_fixture.sh  generate_rules_test.bzl  glob_rules_test.bzl  query_rules_test.bzl
build_tools/bazel_to_cmake/: BUILD.bazel  bazel_to_cmake.py  bazel_to_cmake_config.py  bazel_to_cmake_converter.py  bazel_to_cmake_requirements.py  bazel_to_cmake_targets.py  config_test.py  deps.py  deps_test.py
build_tools/clang_tidy/: BUILD.bazel  CMakeLists.txt  README.md  clang_tidy.bzl  llvm_repo.bzl  run_clang_tidy_action.py
build_tools/clang_tidy/fixtures/: status_macro_scope.c
build_tools/clang_tidy/iree/: ExtentChecks.cc  ExtentChecks.h  IreeTidyModule.cc  LifecycleChecks.cc  LifecycleChecks.h  RefCountChecks.cc  RefCountChecks.h  SmokeCheck.cc  SmokeCheck.h  StatusChecks.cc  StatusChecks.h  StyleChecks.cc  StyleChecks.h  TraceChecks.cc  TraceChecks.h
build_tools/clang_tidy/test/: action_smoke.c  clang_tidy_test.py  extent_checks.c  extent_checks.cc  extent_checks_test.py  lifecycle_checks.c  lifecycle_checks_test.py  non_identifier_functions.cc  refcount_checks.c  refcount_checks_test.py  run_clang_tidy_plugin_test.py  smoke.c  smoke_test.py  status_checks.c  status_checks.cc  status_checks_test.py  status_macro_scope_test.cc  style_checks.c  (+4 more)
build_tools/cmake/: flatbuffer_c_library.cmake  hrx_dependencies.cmake  hrx_installed_tests.cmake  hrx_optimization.cmake  iree_c_embed_data.cmake  iree_cc_binary.cmake  iree_cc_binary_benchmark.cmake  iree_cc_fuzz.cmake  iree_cc_library.cmake  iree_cc_test.cmake  iree_check_test.cmake  iree_configure_testing.cmake  iree_copts.cmake  iree_execution_test_suite.cmake  iree_genrule.cmake  iree_install_support.cmake  iree_macros.cmake  iree_native_test.cmake  iree_python.cmake  iree_setup_toolchain.cmake  iree_third_party_helpers.cmake  iree_vmasm_module.cmake
build_tools/devtools/: BUILD.bazel  __init__.py  aliases.py  bazel.py  bazel_smoke_test.py  ci.py  ci_config.py  ci_test.py  cli.py  cli_smoke_test.py  cli_test.py  cmake.py  cmake_file_api.py  cmake_file_api_test.py  cmake_fuzz.py  cmake_smoke_test.py  cmake_test.py  cmake_try.py  command_plan.py  command_plan_test.py  doctor.py  environment.py  fuzz.py  help_text.py  hooks.py  importers.py  install.py  presubmit.py  project_presubmit.py  project_presubmit_test.py  setup.py  setup_test.py  smoke_test.py  smoke_test_lib.py  source_lock.py  source_lock_test.py  tsan.supp
build_tools/embed_data/: BUILD.bazel  CMakeLists.txt  build_defs.bzl  embed_data.cc  embed_data_rules_test.bzl  embed_data_test.cc
build_tools/lefthook/: BUILD.bazel  README.md  commit_msg.py  commit_msg_test.py  lefthook-local.bazel.yml  lefthook-local.cmake.yml  precommit.sh  presubmit.py  presubmit.sh  presubmit_test.py
build_tools/sanitizer/: BUILD.bazel  iree_sanitizer_suppressions.cmake  lsan_suppressions_vulkan.txt  suppressions.bzl
build_tools/scripts/: BUILD.bazel  amdgpu_device_binaries.py  amdgpu_device_binaries_test.py
build_tools/spirv/: BUILD.bazel  CMakeLists.txt  asm_module.bzl  iree_spirv_asm_module.cmake  spirv_rules_test.bzl
build_tools/testing/: BUILD.bazel  README.md  build_defs.bzl  execution.py  execution_main.py  execution_test.py
build_tools/wasm/: BUILD.bazel  build_defs.bzl  wasm_binary_bundler.py  wasm_binary_bundler_test.py  wasm_node_test_runner.sh  wasm_test_main.mjs
libhrx/: .bazel_to_cmake.cfg.py  BUILD.bazel  CMakeLists.txt  README.md  project.MODULE.bazel  project.cmake
libhrx/build_tools/: presubmit.py
libhrx/cmake/: hrx-config.cmake.in  hrx_exports.lds  pyre-config.cmake.in  pyre_exports.lds
libhrx/cts/: BUILD.bazel  CMakeLists.txt  README.md
libhrx/include/: hrx_compiler.h  hrx_compiler_cxx.h  hrx_runtime.h  hrx_runtime_cxx.h  pyre_compiler.h  pyre_compiler_cxx.h  pyre_runtime.h  pyre_runtime_cxx.h
libhrx/src/: BUILD.bazel  CMakeLists.txt  buffer.c  device.c  iree_hal_compat.h  queue_ops.c  runtime.c  semaphore.c  status.c  stream.c
libhrx/tools/: BUILD.bazel  CMakeLists.txt  hrx_info.c  pyre_info.c
loom/build_tools/: BUILD.bazel  CMakeLists.txt  presubmit.py  presubmit_test.py
loom/src/: BUILD.bazel  CMakeLists.txt
runtime/: .bazel_to_cmake.cfg.py  BUILD.bazel  project.MODULE.bazel  project.cmake
runtime/build_tools/: BUILD.bazel  CMakeLists.txt  presubmit.py  presubmit_test.py
runtime/requirements/: BUILD.bazel  defs.bzl  package_policy.bzl
runtime/src/: BUILD.bazel
(+3710 files in other folders)
