# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

package(default_visibility = ["//visibility:public"])

exports_files([
    ".github/scripts/check_vulkan_hardware_environment.sh",
    ".github/workflows/ci_iree_bazel.yml",
    ".github/workflows/ci_iree_cmake.yml",
])
