# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

"""Bazel module configuration for the IREE repository."""

module(
    name = "iree",
    version = "0.0.0",
    bazel_compatibility = [">=9.1.0"],
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "2.0.1")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "rules_testing", version = "0.9.0", dev_dependency = True)
bazel_dep(name = "catch2", version = "3.13.0", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True, repo_name = "com_google_benchmark")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True, repo_name = "com_google_googletest")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:requirements-dev.lock.txt",
)
use_repo(pip, "pypi")

amdgpu_device_toolchain_repo = use_repo_rule(
    "//build_tools/bazel:amdgpu_device_toolchain_repo.bzl",
    "amdgpu_device_toolchain_repo",
)

amdgpu_device_toolchain_repo(
    name = "iree_amdgpu_device_toolchain",
)

include("//runtime:project.MODULE.bazel")
