# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

"""Bazel module identity and dependency fragment order for the IREE repository."""

module(
    name = "iree",
    version = "0.0.0",
    bazel_compatibility = [">=9.1.0"],
)

include("//build_tools/bazel:deps.MODULE.bazel")
include("//build_tools/third_party:deps.MODULE.bazel")
include("//runtime/build_tools/third_party:deps.MODULE.bazel")
include("//libhrx/build_tools/third_party:deps.MODULE.bazel")
