# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//build_tools/bazel:cc.bzl", "iree_cc_library")
load("//build_tools/bazel:cc_link.bzl", "cc_link")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

iree_cc_library(
    name = "pthreads",
    linkopts = cc_link.pthreads_linkopts(),
)

iree_cc_library(
    name = "dl",
    linkopts = cc_link.dl_linkopts(),
)

iree_cc_library(
    name = "rt",
    linkopts = cc_link.rt_linkopts(),
)
