# Copyright 2026 The HRX Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//build_tools/bazel:cc.bzl", "iree_cc_library")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

iree_cc_library(
    name = "defines",
    hdrs = [
        "include/hrx_runtime.h",
        "include/hrx_runtime_cxx.h",
    ],
    includes = ["include"],
)

alias(
    name = "hrx",
    actual = "//libhrx/src/libhrx:hrx",
)
